force-app/main/default/objects/Client_Overview_Configuration__c/Client_Overview_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The criteria that determines what and how cases and reference objects are displayed in the Onboarding Overview section of the Client Overview.</description>
    <label>Client Overview Configuration</label>
</CustomObject>