force-app/main/default/objects/Client_Overview_Configuration__c/fields/Case_Exp_Run_Date_api__c.field-meta.xml
<CustomField>
    <fullName>Case_Exp_Run_Date_api__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Expected Run Date Api</label>
    <length>80</length>
    <type>Text</type>
</CustomField>