force-app/main/default/objects/Client_Overview_Configuration__c/fields/Case_Only__c.field-meta.xml
<CustomField>
    <fullName>Case_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Case the only object used for Onboarding this product type (No Reference Object).</description>
    <inlineHelpText>Is Case the only object used for Onboarding this product type (No Reference Object).</inlineHelpText>
    <label>Case Only?</label>
    <type>Checkbox</type>
</CustomField>