force-app/main/default/objects/Client_Overview_Configuration__c/fields/Case_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_Name__c</fullName>
    <description>Select the Onboarding Case record type name for this product.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select the Onboarding Case record type name for this product.</inlineHelpText>
    <label>Case Record Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>