force-app/main/default/objects/Client_Overview_Configuration__c/fields/Case_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Run_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Case Expected Run Date?</label>
    <type>Checkbox</type>
</CustomField>