force-app/main/default/objects/Client_Overview_Configuration__c/fields/Completed_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Completed_Onboarding_Status__c</fullName>
    <description>The Case or Reference Object Current Step that indicates that the client has been successfully Onboarded.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Case or Reference Object Current Step that indicates that the client has been successfully Onboarded.</inlineHelpText>
    <label>Completed Onboarding Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>