force-app/main/default/objects/Client_Overview_Configuration__c/fields/Current_Step_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Step API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>