force-app/main/default/objects/Client_Overview_Configuration__c/fields/MPSC__c.field-meta.xml
<CustomField>
    <fullName>MPSC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this display on Reference MPSC?</description>
    <inlineHelpText>Should this display on Reference MPSC?</inlineHelpText>
    <label>MPSC?</label>
    <type>Checkbox</type>
</CustomField>