force-app/main/default/objects/Client_Overview_Configuration__c/fields/OnboardingPOC_api__c.field-meta.xml
<CustomField>
    <fullName>OnboardingPOC_api__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onboarding Point of Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>