force-app/main/default/objects/Client_Overview_Configuration__c/fields/OnboardingPocFromCase__c.field-meta.xml
<CustomField>
    <fullName>OnboardingPocFromCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Case Onboarding POC?</label>
    <type>Checkbox</type>
</CustomField>