force-app/main/default/objects/Client_Overview_Configuration__c/fields/Owner_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Owner_Custom_Label__c</fullName>
    <description>The custom label (Title) for the Owner of the Onboarding Case or Reference Object.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The custom label (Title) for the Owner of the Onboarding Case or Reference Object.</inlineHelpText>
    <label>Owner Custom Label</label>
    <length>60</length>
    <type>Text</type>
</CustomField>