force-app/main/default/objects/Client_Overview_Configuration__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>The name of the product as it should be displayed int he Onboarding Overview.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the product as it should be displayed int he Onboarding Overview.</inlineHelpText>
    <label>Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>