force-app/main/default/objects/Client_Overview_Configuration__c/fields/Reference_Object_Exp_Run_Date_api__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object_Exp_Run_Date_api__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Object Expected Run Date Api</label>
    <length>80</length>
    <type>Text</type>
</CustomField>