force-app/main/default/objects/Client_Overview_Configuration__c/fields/Reference_Object_Relationship_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object_Relationship_API_Name__c</fullName>
    <description>The API name of the relationship name between the Case and the Reference Object. Leave this blank if no reference object is used for Onboarding.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the relationship name between the Case and the Reference Object. Leave this blank if no reference object is used for Onboarding.</inlineHelpText>
    <label>Reference Object Relationship API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>