force-app/main/default/objects/Client_Overview_Configuration__c/listViews/Detailed_view.listView-meta.xml
<ListView>
    <fullName>Detailed_view</fullName>
    <columns>NAME</columns>
    <columns>Case_Only__c</columns>
    <columns>MPSC__c</columns>
    <columns>Case_Record_Type_Name__c</columns>
    <columns>Completed_Onboarding_Status__c</columns>
    <columns>Reference_Object_Relationship_API_Name__c</columns>
    <columns>Case_Run_Date__c</columns>
    <columns>OnboardingPocFromCase__c</columns>
    <columns>OnboardingPOC_api__c</columns>
    <columns>Reference_Object_Exp_Run_Date_api__c</columns>
    <columns>Case_Exp_Run_Date_api__c</columns>
    <columns>Current_Step_API_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed view</label>
</ListView>